# scorpio_simulator

./: .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  README.md  dependencies.repos  package.xml
.github/: mergify.yml
.github/workflows/: build_and_test.yml
config/: gz_world.yaml  ros_gz_bridge.yaml
env-hooks/: gazebo.dsv.in
include/scorpio_simulator/: global_odometry_publisher.hpp  linear_ping_pong_mover.hpp
launch/: bringup_sim_launch.py  gazebo_launch.py  rviz_launch.py  spawn_robots_launch.py
resource/ign/: gui.config  video_demo.config
resource/models/dynamic_obstacle/: model.config  model.sdf
resource/models/rmuc_2024/: model.sdf
resource/models/turtlebot3_dqn_world/obstacle2/: model.sdf
resource/models/turtlebot3_house/: model.sdf
resource/models/turtlebot3_house/cafe_table/meshes/: cafe_table.dae
resource/models/warehouse/: model.sdf
resource/worlds/: empty_world.sdf  rmuc_2024_world.sdf  rmuc_2025_world.sdf  simple_baylands_world.sdf  turtlebot3_dqn_world.sdf  turtlebot3_house_world.sdf  warehouse_world.sdf
rviz/: visualize.rviz
scripts/: sim_gui_follow.sh
src/: global_odometry_publisher.cpp  linear_ping_pong_mover.cpp
