<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>scorpio_simulator</name>
	<version>0.0.1</version>
	<description>scorpio robot Gazebo simulator</description>

	<maintainer email="lihanchen2004@163.com">Lihan Chen</maintainer>
	<license>Apache-2.0</license>
	<author email="lihanchen2004@163.com">Lihan Chen</author>

	<buildtool_depend>ament_cmake</buildtool_depend>

	<depend>rclcpp</depend>
	<depend>nav_msgs</depend>

	<exec_depend>launch</exec_depend>
	<exec_depend>launch_ros</exec_depend>
	<exec_depend>ros_gz_sim</exec_depend>
	<exec_depend>ros_gz_bridge</exec_depend>
	<exec_depend>robot_state_publisher</exec_depend>
	<exec_depend>ros2_control</exec_depend>
	<exec_depend>ackermann_steering_controller</exec_depend>
	<exec_depend>joint_state_broadcaster</exec_depend>
	<exec_depend>scorpio_description</exec_depend>
	<exec_depend>rgl_gazebo_plugin</exec_depend>

	<test_depend>ament_lint_auto</test_depend>
	<test_depend>ament_cmake_clang_format</test_depend>
	<test_depend>ament_cmake_clang_tidy</test_depend>
	<test_depend>ament_cmake_black</test_depend>
	<test_depend>ament_cmake_xmllint</test_depend>
	<test_depend>ament_cmake_copyright</test_depend>

	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>
